--- a/index.html
+++ b/index.html
@@ -68,13 +68,14 @@
       <br />
       <br />
       <a href="#">Jump to the top</a>
-      <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
-      <br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br /><br />
+      <br /><br />
+      <br />
+      <br /><br /><br /><br /><br /><br /><br /><br /><br />
       <a
-        class="secret"
+        class="snake"
         href="/games.html"
-        style="margin-left: 550px; font-size: 100px; font-family: Impact"
-        >Secret</a
+        style="margin-top: 200px; font-size: 30px; font-family: Impact"
+        >Play Snake!</a
       >
       <br /><br />
     </div>
