--- a/index.html
+++ b/index.html
@@ -44,8 +44,6 @@
       <br />
       <br />
       <br /><br />
-      <br />
-      <br /><br />
       <a
         class="snake"
         href="/games.html"
@@ -54,20 +52,23 @@
       >
       <br /><br /><br>
      <div>
+      <br>
+      <img
+        class="CSS-Verify"
+        style="border: 0; width: 88px; height: 31px"
+        src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
+        alt="Valid CSS!"
+      />
+      <br>
+      <br><br>
+      <a style="font-size: 30px; font-family: Impact;" href="#">Jump to the top</a>
+      <br><br><br><br>
       <p>
         Made by <em>Shibeception &copy;</em>
         <br />
         Images by Minh Pham from unsplash
       </p>
       <br />
-       <br><br><br>
-        <a href="#">Jump to the top</a>
-        <img
-          class="CSS-Verify"
-          style="border: 0; width: 88px; height: 31px"
-          src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
-          alt="Valid CSS!"
-        />
       </a>
       <a
         id="section-bottom"
