--- a/index.html
+++ b/index.html
@@ -41,39 +41,40 @@
         alt="an image of another shiba"
       />
     </main>
+    <br />
+    <br />
+    <br /><br />
+    <a
+      class="snake"
+      href="/games.html"
+      style="margin-top: 200px; font-size: 30px; font-family: Impact"
+      >Play Snake!</a
+    >
+    <br /><br /><br />
+    <div>
       <br />
-      <br />
-      <br /><br />
-      <a
-        class="snake"
-        href="/games.html"
-        style="margin-top: 200px; font-size: 30px; font-family: Impact"
-        >Play Snake!</a
-      >
-      <br /><br /><br>
-     <div>
-      <br>
       <img
         class="CSS-Verify"
         style="border: 0; width: 88px; height: 31px"
         src="http://jigsaw.w3.org/css-validator/images/vcss-blue"
         alt="Valid CSS!"
       />
-      <br>
-      <br><br>
-      <a style="font-size: 30px; font-family: Impact;" href="#">Jump to the top</a>
-      <br><br><br><br>
+      <br />
+      <br /><br />
+      <a style="font-size: 30px; font-family: Impact" href="#"
+        >Jump to the top</a
+      >
+      <br /><br /><br /><br />
       <p>
         Made by <em>Shibeception &copy;</em>
         <br />
         Images by Minh Pham from unsplash
       </p>
       <br />
-      </a>
       <a
         id="section-bottom"
         href="http://jigsaw.w3.org/css-validator/check/referer"
-      >
+      ></a>
     </div>
   </body>
 </html>
