--- a/index.html
+++ b/index.html
@@ -7,12 +7,7 @@
     <meta name="keywords" content="HTML, CSS" />
     <meta name="description" content="Shibeception's Test page" />
     <title>Test</title>
-    <link rel="stylesheet" href="styles.css" />
-    <style>
-      body {
-        background-color: rgb(83, 83, 83);
-      }
-    </style>
+    <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <h1 class="header">
@@ -42,12 +37,10 @@
       />
     </main>
     <br />
-    <br />
-    <br /><br />
     <a
       class="snake"
       href="/games.html"
-      style="margin-top: 200px; font-size: 30px; font-family: Impact"
+      style="margin-top: 10px; font-size: 30px; font-family: Impact"
       >Play Snake!</a
     >
     <br /><br /><br />
@@ -75,6 +68,17 @@
         id="section-bottom"
         href="http://jigsaw.w3.org/css-validator/check/referer"
       ></a>
-    </div>
+      <div class="flex-container">
+      <img class="imgFC" src="images/minh-pham-RSiqCjdmKPM-unsplash(1).jpg" alt="idk">
+      <img class="imgFC" src="images/minh-pham-LTQMgx8tYqM-unsplash.jpg" alt="idk">
+      <img class="imgFC" src="images/1454361.jpg" alt="idk">
+      <img class="imgFC" src="images/minh-pham-RSiqCjdmKPM-unsplash(1).jpg" alt="idk">
+      <img class="imgFC" src="images/minh-pham-LTQMgx8tYqM-unsplash.jpg" alt="idk">
+      <img class="imgFC" src="images/1454361.jpg" alt="idk">
+      <img class="imgFC" src="images/minh-pham-RSiqCjdmKPM-unsplash(1).jpg" alt="idk">
+      <img class="imgFC" src="images/minh-pham-LTQMgx8tYqM-unsplash.jpg" alt="idk">
+
+      <img class="imgFC" src="images/1454361.jpg" alt="idk">
+      </div>
   </body>
 </html>
