--- a/index.html
+++ b/index.html
@@ -41,6 +41,11 @@
     height: 10vh;
   }
 }
+@media (max-width: 500px) {
+  .top-bar {
+    gap: 20px;
+  }
+}
 .home:hover,
 .logo:hover,
 .logo-text:hover,
