--- a/index.html
+++ b/index.html
@@ -85,8 +85,9 @@ audio {
   <body>
     <div id="top" class="top-bar">
       <i class="fa-solid fa-bars nav-bar-option"></i>
-      <p class="logo-text">The Arcade</p>
-      <p class="logo"><img src="/arcade.png" alt="The Arcade" /></p>
+      <p class="logo-text">
+        The Arcade <img class="logo" src="/arcade.png" alt="The Arcade" />
+      </p>
       <p class="home">
         <a href="#top">Home <i class="fa-solid fa-house"></i></a>
       </p>
@@ -94,5 +95,6 @@ audio {
       <p class="contact">Contact <i class="fa-solid fa-phone"></i></p>
     </div>
     <nav class="nav-bar"></nav>
+    <div class="games-selection"></div>
   </body>
 </html>
