--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v6.2.0/css/all.css" />
     <style>
-      body {
+ body {
   background-color: rgb(245, 245, 245);
   font-family: Aldrich, monospace;
   margin: 0;
@@ -47,7 +47,6 @@
   }
 }
 .home:hover,
-.logo:hover,
 .logo-text:hover,
 .nav-bar-option:hover,
 .games:hover,
@@ -68,9 +67,14 @@ a {
 }
 .logo {
   position: relative;
-  top: -2px;
-  left: -10px;
+
+  top: 4px;
+  left: 0px;
   font-weight: bold;
+}
+.logo-text {
+  position: relative;
+  top: -10px;
 }
 audio {
   position: fixed;
@@ -80,6 +84,10 @@ audio {
   position: relative;
   top: 2px;
 }
+.games-selection {
+  display: grid;
+}
+
     </style>
   </head>
   <body>
