--- a/index.html
+++ b/index.html
@@ -99,10 +99,14 @@ audio {
       <p class="home">
         <a href="#top">Home <i class="fa-solid fa-house"></i></a>
       </p>
-      <p class="games">Games <i class="fa-solid fa-gamepad"></i></p>
-      <p class="contact">Contact <i class="fa-solid fa-phone"></i></p>
+      <p class="games">
+        <a href="#games-selection">Games <i class="fa-solid fa-gamepad"></i></a>
+      </p>
+      <p class="contact">
+        <a href="/contact.html">Contact <i class="fa-solid fa-phone"></i></a>
+      </p>
     </div>
     <nav class="nav-bar"></nav>
-    <div class="games-selection"></div>
+    <div id="games-selection" class="games-selection"></div>
   </body>
 </html>
