--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="A Arcade with fun games to play!" />
     <title>The Arcade</title>
     <link rel="icon" type="image/x-icon" href="/images/Favicon.ico" />
-    <link rel="stylesheet" href"/styles.css" />
+    <link rel="stylesheet" href="arcade-styles.css" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v6.2.0/css/all.css" />
@@ -89,7 +89,7 @@ audio {
 }
     </style>
   </head>
-  <body>
+ <body>
     <div id="top" class="top-bar">
       <i class="fa-solid fa-bars nav-bar-option"></i>
       <p class="logo-text">
