--- a/contact.html
+++ b/contact.html
@@ -7,11 +7,14 @@
     <meta name="keywords" content="HTML, CSS" />
     <meta name="description" content="A Arcade with fun games to play!" />
     <title>The Arcade</title>
-    <link rel="icon" type="image/x-icon" href="/images/Favicon.ico" />
-    <link rel="stylesheet" href="arcade-styles.css" />
+    <link rel="stylesheet" href="contact-styles.css" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v6.2.0/css/all.css" />
   </head>
-  <body></body>
+  <body>
+    <img class="dog" src="/images/Sprite-0001.png" alt="a shiba" />
+    <div class="bar"></div>a
+    <!--  <div class="line"></div>  -->
+  </body>
 </html>
