--- a/index.html
+++ b/index.html
@@ -8,12 +8,12 @@
     <meta name="description" content="A Arcade with fun games to play!" />
     <title>The Arcade</title>
     <link rel="icon" type="image/x-icon" href="/images/Favicon.ico" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="arcade-styles.css" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v6.2.0/css/all.css" />
   </head>
- <body>
+  <body>
     <div id="top" class="top-bar">
       <i class="fa-solid fa-bars nav-bar-option"></i>
       <p class="logo-text">
@@ -23,8 +23,11 @@
         <a href="#top">Home <i class="fa-solid fa-house"></i></a>
       </p>
       <p class="games">
-        <a href="#games-selection">Games <i class="fa-solid fa-gamepad"></i></a>
+        <a href="/contact.html">Games <i class="fa-solid fa-gamepad"></i></a>
       </p>
+      <!-- Placeholder <p class="games">
+        <a href="#games-selection">Games <i class="fa-solid fa-gamepad"></i></a>
+      </p>-->
       <p class="contact">
         <a href="/contact.html">Contact <i class="fa-solid fa-phone"></i></a>
       </p>
