--- a/contact.html
+++ b/contact.html
@@ -13,8 +13,24 @@
       href="https://use.fontawesome.com/releases/v6.2.0/css/all.css" />
   </head>
   <body>
+    <div id="top" class="top-bar">
+      <i class="fa-solid fa-bars nav-bar-option"></i>
+      <p class="logo-text">
+        The Arcade <img class="logo" src="/arcade.png" alt="The Arcade" />
+      </p>
+      <p class="home">
+        <a href="arcade.html">Home <i class="fa-solid fa-house"></i></a>
+      </p>
+      <p class="games">
+        <a href="#games-selection">Games <i class="fa-solid fa-gamepad"></i></a>
+      </p>
+      <p class="contact">
+        <a href="/contact.html">Contact <i class="fa-solid fa-phone"></i></a>
+      </p>
+    </div>
+    <nav class="nav-bar"></nav>
     <img class="dog" src="/images/Sprite-0001.png" alt="a shiba" />
-    <div class="bar"></div>a
+    <div class="bar"></div>
     <!--  <div class="line"></div>  -->
   </body>
 </html>
