--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
         The Arcade <img class="logo" src="/arcade.png" alt="The Arcade" />
       </p>
       <p class="home">
-        <a href="arcade.html">Home <i class="fa-solid fa-house"></i></a>
+        <a href="index.html">Home <i class="fa-solid fa-house"></i></a>
       </p>
       <p class="games">
         <a href="#games-selection">Games <i class="fa-solid fa-gamepad"></i></a>
