--- a/contact.html
+++ b/contact.html
@@ -29,7 +29,7 @@
       </p>
     </div>
     <nav class="nav-bar"></nav>
-    <img class="dog" src="/images/Sprite-0001.png" alt="a shiba" />
+    <img class="dog" src="/Sprite-0001.png" alt="a shiba" />
     <div class="bar"></div>
     <!--  <div class="line"></div>  -->
   </body>
