--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="A Arcade with fun games to play!" />
     <title>The Arcade</title>
     <link rel="icon" type="image/x-icon" href="/images/Favicon.ico" />
-    <link rel="stylesheet" href="arcade-styles.css" />
+    <link rel="stylesheet" href="styles.css" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v6.2.0/css/all.css" />
@@ -23,11 +23,8 @@
         <a href="#top">Home <i class="fa-solid fa-house"></i></a>
       </p>
       <p class="games">
-        <a href="/contact.html">Games <i class="fa-solid fa-gamepad"></i></a>
-      </p>
-      <!-- Placeholder <p class="games">
         <a href="#games-selection">Games <i class="fa-solid fa-gamepad"></i></a>
-      </p>-->
+      </p>
       <p class="contact">
         <a href="/contact.html">Contact <i class="fa-solid fa-phone"></i></a>
       </p>
