--- a/contact.html
+++ b/contact.html
@@ -31,6 +31,7 @@
     <nav class="nav-bar"></nav>
     <img class="dog" src="/Sprite-0001.png" alt="a shiba" />
     <div class="bar"></div>
+    <p>Note: The shiba was not made by me and will be replaced in the near future with art actually made by me</p>
     <!--  <div class="line"></div>  -->
   </body>
 </html>
