--- a/contact.html
+++ b/contact.html
@@ -19,7 +19,7 @@
         The Arcade <img class="logo" src="/arcade.png" alt="The Arcade" />
       </p>
       <p class="home">
-        <a href="index.html">Home <i class="fa-solid fa-house"></i></a>
+        <a href="arcade.html">Home <i class="fa-solid fa-house"></i></a>
       </p>
       <p class="games">
         <a href="#games-selection">Games <i class="fa-solid fa-gamepad"></i></a>
@@ -29,9 +29,13 @@
       </p>
     </div>
     <nav class="nav-bar"></nav>
-    <img class="dog" src="/Sprite-0001.png" alt="a shiba" />
-    <div class="bar"></div>
-    <p>Note: The shiba was not made by me and will be replaced in the near future with art actually made by me</p>
-    <!--  <div class="line"></div>  -->
+    <div class="grid-contact">
+      <p class="contact-info">
+        Contact me here!<br />
+        email: grantasmin@gmail.com<br />
+        more contact information<br />
+        coming soon.
+      </p>
+    </div>
   </body>
 </html>
