--- a/contact.html
+++ b/contact.html
@@ -16,10 +16,10 @@
     <div id="top" class="top-bar">
       <i class="fa-solid fa-bars nav-bar-option"></i>
       <p class="logo-text">
-        The Arcade <img class="logo" src="/arcade.png" alt="The Arcade" />
+        The Arcade <img class="logo" src="arcade.png" alt="The Arcade" />
       </p>
       <p class="home">
-        <a href="arcade.html">Home <i class="fa-solid fa-house"></i></a>
+        <a href="index.html">Home <i class="fa-solid fa-house"></i></a>
       </p>
       <p class="games">
         <a href="#games-selection">Games <i class="fa-solid fa-gamepad"></i></a>
@@ -29,7 +29,7 @@
       </p>
     </div>
     <nav class="nav-bar"></nav>
-    <div class="grid-contact">
+    <div class="contact-area">
       <p class="contact-info">
         Contact me here!<br />
         email: grantasmin@gmail.com<br />
