--- a/index.html
+++ b/index.html
@@ -41,18 +41,18 @@
         <a class="snakeLink" href="/snake.html">
           <img
             class="snakeimg"
-            src="/images/snakeiconconsole2-export.png"
+            src="/snakeiconconsole2-export.png"
             alt="a image of a snake" />
         </a>
       </div>
       <div class="item 2">
-        <img src="/images/CMtext.png" alt="Coming soon" />
+        <img src="/CMtext.png" alt="Coming soon" />
       </div>
       <div class="item 3">
-        <img src="/images/CMtext.png" alt="Coming soon" />
+        <img src="/CMtext.png" alt="Coming soon" />
       </div>
       <div class="item i4">
-        <img src="/images/CMtext.png" alt="Coming soon" />
+        <img src="/CMtext.png" alt="Coming soon" />
       </div>
     </div>
   </body>
