--- a/snake.html
+++ b/snake.html
@@ -26,10 +26,10 @@
         <img class="logo" src="/arcade.png" alt="The Arcade logo" />
       </p>
       <p class="home">
-        <a href="/arcade.html#top">Home <i class="fa-solid fa-house"></i></a>
+        <a href="/index.html#top">Home <i class="fa-solid fa-house"></i></a>
       </p>
       <p class="games">
-        <a href="/arcade.html#games-selection"
+        <a href="/index.html#games-selection"
           >Games <i class="fa-solid fa-gamepad"></i
         ></a>
       </p>
