--- a/contact.html
+++ b/contact.html
@@ -22,7 +22,7 @@
         <a href="index.html">Home <i class="fa-solid fa-house"></i></a>
       </p>
       <p class="games">
-        <a href="#games-selection">Games <i class="fa-solid fa-gamepad"></i></a>
+        <a href="/index.html#games-selection">Games <i class="fa-solid fa-gamepad"></i></a>
       </p>
       <p class="contact">
         <a href="/contact.html">Contact <i class="fa-solid fa-phone"></i></a>
