--- a/contact.html
+++ b/contact.html
@@ -6,7 +6,7 @@
     <meta name="keywords" content="HTML, CSS" />
     <meta name="description" content="A Arcade with fun games to play!" />
     <title>The Arcade</title>
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
+    <link rel="icon" type="image/x-icon" href="/webLogo.png" />
     <link rel="stylesheet" href="contact-styles.css" />
     <link
       rel="stylesheet"
