--- a/contact.html
+++ b/contact.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<head>
+<html lang="en-us">
+  <head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="keywords" content="HTML, CSS" />
     <meta name="description" content="A Arcade with fun games to play!" />
     <title>The Arcade</title>
-    <link rel="icon" type="image/x-icon" href="/webLogo.png" />
+    <link rel="icon" type="image/x-icon" href="/images/ArcadeLogo2Trim.gif" />
     <link rel="stylesheet" href="contact-styles.css" />
     <link
       rel="stylesheet"
@@ -21,13 +22,16 @@
     <div id="top" class="top-bar">
       <i class="fa-solid fa-bars nav-bar-option"></i>
       <p class="logo-text">
-        The Arcade <img class="logo" src="arcade.png" alt="The Arcade" />
+        The Arcade
+        <img class="logo" src="/images/ArcadeLogo2Trim.gif" alt="The Arcade" />
       </p>
       <p class="home">
-        <a href="index.html">Home <i class="fa-solid fa-house"></i></a>
+        <a href="arcade.html">Home <i class="fa-solid fa-house"></i></a>
       </p>
       <p class="games">
-        <a href="/index.html#games-selection">Games <i class="fa-solid fa-gamepad"></i></a>
+        <a href="arcade.html#games-selection"
+          >Games <i class="fa-solid fa-gamepad"></i
+        ></a>
       </p>
       <p class="contact">
         <a href="/contact.html">Contact <i class="fa-solid fa-phone"></i></a>
@@ -37,10 +41,17 @@
     <div class="contact-area">
       <p class="contact-info">
         Contact me here!<br />
-        email: grantasmin@gmail.com<br />
+        email: shibaception@gmail.com<br />
         more contact information<br />
         coming soon.
       </p>
     </div>
-  </body>
+    <!--
+    <p title="Wot?" class="virtual-text">
+      <marquee direction="right">
+        Breaking News:
+        <span contenteditable="true">Placeholder text</span></marquee
+      >
+    </p>
+  --></body>
 </html>
