--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
     <meta name="keywords" content="HTML, CSS" />
     <meta name="description" content="A Arcade with fun games to play!" />
     <title>The Arcade</title>
-    <link rel="icon" type="image/x-icon" href="/webLogo.png" />
-    <link rel="stylesheet" href="/styles.css" />
+    <link rel="icon" type="image/x-icon" href="/images/ArcadeLogo2Trim.gif" />
+    <link rel="stylesheet" href="arcade-styles.css" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v6.2.0/css/all.css" />
@@ -17,12 +17,15 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;500;900&display=swap"
       rel="stylesheet" />
+    <script src="arcade-scripts.js"></script>
+    <!--  Type="module" for importing and exporting -->
   </head>
   <body>
     <div id="top" class="top-bar">
       <i class="fa-solid fa-bars nav-bar-option"></i>
       <p class="logo-text">
-        The Arcade <img class="logo" src="/arcade.png" alt="The Arcade" />
+        The Arcade
+        <img class="logo" src="/images/ArcadeLogo2Trim.gif" alt="The Arcade" />
       </p>
       <p class="home">
         <a href="#top">Home <i class="fa-solid fa-house"></i></a>
@@ -35,24 +38,23 @@
       </p>
     </div>
     <nav class="nav-bar"></nav>
-    <div class="textContainer"><h1>Games</h1></div>
     <div id="games-selection" class="games-selection">
       <div class="item 1">
         <a class="snakeLink" href="/snake.html">
           <img
             class="snakeimg"
-            src="/snakeiconconsole2-export.png"
+            src="/images/snakeiconconsole2-export.png"
             alt="a image of a snake" />
         </a>
       </div>
       <div class="item 2">
-        <img src="/CMtext.png" alt="Coming soon" />
+        <img src="/images/CMtext.png" alt="Coming soon" />
       </div>
       <div class="item 3">
-        <img src="/CMtext.png" alt="Coming soon" />
+        <img src="/images/CMtext.png" alt="Coming soon" />
       </div>
-      <div class="item i4">
-        <img src="/CMtext.png" alt="Coming soon" />
+      <div class="item 4">
+        <img src="/images/CMtext.png" alt="Coming soon" />
       </div>
     </div>
   </body>
