--- a/contact.html
+++ b/contact.html
@@ -26,10 +26,10 @@
         <img class="logo" src="/images/ArcadeLogo2Trim.gif" alt="The Arcade" />
       </p>
       <p class="home">
-        <a href="arcade.html">Home <i class="fa-solid fa-house"></i></a>
+        <a href="index.html">Home <i class="fa-solid fa-house"></i></a>
       </p>
       <p class="games">
-        <a href="arcade.html#games-selection"
+        <a href="index.html#games-selection"
           >Games <i class="fa-solid fa-gamepad"></i
         ></a>
       </p>
