--- a/contact.html
+++ b/contact.html
@@ -7,7 +7,7 @@
     <meta name="keywords" content="HTML, CSS" />
     <meta name="description" content="A Arcade with fun games to play!" />
     <title>The Arcade</title>
-    <link rel="icon" type="image/x-icon" href="/images/ArcadeLogo2Trim.gif" />
+    <link rel="icon" type="image/x-icon" href="/ArcadeLogo2Trim.gif" />
     <link rel="stylesheet" href="contact-styles.css" />
     <link
       rel="stylesheet"
