--- a/snake.html
+++ b/snake.html
@@ -29,10 +29,10 @@
           alt="The Arcade logo" />
       </p>
       <p class="home">
-        <a href="/snake.html#top">Home <i class="fa-solid fa-house"></i></a>
+        <a href="/index.html#top">Home <i class="fa-solid fa-house"></i></a>
       </p>
       <p class="games">
-        <a href="/snake.html#games-selection"
+        <a href="/index.html#games-selection"
           >Games <i class="fa-solid fa-gamepad"></i
         ></a>
       </p>
