--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <meta name="description" content="A Arcade with fun games to play!" />
     <title>The Arcade</title>
     <link rel="icon" type="image/x-icon" href="/ArcadeLogo2Trim.gif" />
-    <link rel="stylesheet" href="arcade-styles.css" />
+    <link rel="stylesheet" href="styles.css" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v6.2.0/css/all.css" />
