--- a/contact.html
+++ b/contact.html
@@ -23,7 +23,7 @@
       <i class="fa-solid fa-bars nav-bar-option"></i>
       <p class="logo-text">
         The Arcade
-        <img class="logo" src="/images/ArcadeLogo2Trim.gif" alt="The Arcade" />
+        <img class="logo" src="/ArcadeLogo2Trim.gif" alt="The Arcade" />
       </p>
       <p class="home">
         <a href="index.html">Home <i class="fa-solid fa-house"></i></a>
