--- a/snake.html
+++ b/snake.html
@@ -25,7 +25,7 @@
         The Arcade
         <img
           class="logo"
-          src="/images/ArcadeLogo2Trim.gif"
+          src="/ArcadeLogo2Trim.gif"
           alt="The Arcade logo" />
       </p>
       <p class="home">
