--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
       <i class="fa-solid fa-bars nav-bar-option"></i>
       <p class="logo-text">
         The Arcade
-        <img class="logo" src="/images/ArcadeLogo2Trim.gif" alt="The Arcade" />
+        <img class="logo" src="/ArcadeLogo2Trim.gif" alt="The Arcade" />
       </p>
       <p class="home">
         <a href="#top">Home <i class="fa-solid fa-house"></i></a>
@@ -43,18 +43,18 @@
         <a class="snakeLink" href="/snake.html">
           <img
             class="snakeimg"
-            src="/images/snakeiconconsole2-export.png"
+            src="/snakeiconconsole2-export.png"
             alt="a image of a snake" />
         </a>
       </div>
       <div class="item 2">
-        <img src="/images/CMtext.png" alt="Coming soon" />
+        <img src="/CMtext.png" alt="Coming soon" />
       </div>
       <div class="item 3">
-        <img src="/images/CMtext.png" alt="Coming soon" />
+        <img src="/CMtext.png" alt="Coming soon" />
       </div>
       <div class="item 4">
-        <img src="/images/CMtext.png" alt="Coming soon" />
+        <img src="/CMtext.png" alt="Coming soon" />
       </div>
     </div>
   </body>
