--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
         <a class="snakeLink" href="/snake.html">
           <img
             class="snakeimg"
-            src="/SnekCover.png"
+            src="/SnekCover-export.png"
             alt="a image of a snake" />
         </a>
       </div>
