--- a/contact.html
+++ b/contact.html
@@ -39,6 +39,10 @@
     </div>
     <nav class="nav-bar"></nav>
     <div class="contact-area">
+      <img
+        class="profile-pic"
+        src="/images/GalacticSesame2.png"
+        alt="A Shiba inu" />
       <p class="contact-info">
         Contact me here!<br />
         email: shibaception@gmail.com<br />
