--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
     <div class="contact-area">
       <img
         class="profile-pic"
-        src="/images/GalacticSesame2.png"
+        src="/GalacticSesame2.png"
         alt="A Shiba inu" />
       <p class="contact-info">
         Contact me here!<br />
