--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <meta name="description" content="A Arcade with fun games to play!" />
     <title>The Arcade</title>
     <link rel="icon" type="image/x-icon" href="/ArcadeLogo2Trim.gif" />
-    <link rel="stylesheet" href="contact-styles.css" />
+    <link rel="stylesheet" href="/contact-styles.css" />
     <link
       rel="stylesheet"
       href="https://use.fontawesome.com/releases/v6.2.0/css/all.css" />
@@ -26,10 +26,10 @@
         <img class="logo" src="/ArcadeLogo2Trim.gif" alt="The Arcade" />
       </p>
       <p class="home">
-        <a href="index.html">Home <i class="fa-solid fa-house"></i></a>
+        <a href="/index.html">Home <i class="fa-solid fa-house"></i></a>
       </p>
       <p class="games">
-        <a href="index.html#games-selection"
+        <a href="/index.html#games-selection"
           >Games <i class="fa-solid fa-gamepad"></i
         ></a>
       </p>
