--- a/index.html
+++ b/index.html
@@ -23,12 +23,14 @@
   <body>
     <div id="top" class="top-bar">
       <i class="fa-solid fa-bars nav-bar-option"></i>
-      <p class="logo-text">
-        The Arcade
-        <img class="logo" src="/ArcadeLogo2Trim.gif" alt="The Arcade" />
-      </p>
-      <p class="home">
-        <a href="#top">Home <i class="fa-solid fa-house"></i></a>
+     <p class="logo-text top-bar-item">
+        <a class="top-bar-item" href="arcade.html">
+          The Arcade
+          <img
+            class="logo top-bar-item"
+            src="/images/ArcadeLogo2Trim.gif"
+            alt="The Arcade" />
+        </a>
       </p>
       <p class="games">
         <a href="#games-selection">Games <i class="fa-solid fa-gamepad"></i></a>
