--- a/snake.html
+++ b/snake.html
@@ -22,7 +22,7 @@
     <div id="top" class="top-bar">
       <i class="fa-solid fa-bars nav-bar-option"></i>
       <p class="logo-text top-bar-item">
-        <a class="top-bar-item" href="arcade.html">
+        <a class="top-bar-item" href="/index.html">
           The Arcade
           <img
             class="logo top-bar-item"
