--- a/snake.html
+++ b/snake.html
@@ -26,7 +26,7 @@
           The Arcade
           <img
             class="logo top-bar-item"
-            src="/images/ArcadeLogo2Trim.gif"
+            src="/ArcadeLogo2Trim.gif"
             alt="The Arcade" />
         </a>
       </p>
