--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
     <div id="top" class="top-bar">
       <i class="fa-solid fa-bars nav-bar-option"></i>
      <p class="logo-text top-bar-item">
-        <a class="top-bar-item" href="arcade.html">
+        <a class="top-bar-item" href="/index.html">
           The Arcade
           <img
             class="logo top-bar-item"
-            src="/images/ArcadeLogo2Trim.gif"
+            src="/ArcadeLogo2Trim.gif"
             alt="The Arcade" />
         </a>
       </p>
