--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
     <div id="top" class="top-bar">
       <i class="fa-solid fa-bars nav-bar-option"></i>
      <p class="logo-text top-bar-item">
-        <a class="top-bar-item" href="/index.html">
+        <a class="top-bar-item" href="/index.html#top">
           The Arcade
           <img
             class="logo top-bar-item"
@@ -33,7 +33,7 @@
         </a>
       </p>
       <p class="games">
-        <a href="#games-selection">Games <i class="fa-solid fa-gamepad"></i></a>
+        <a href="/index.html#games-selection">Games <i class="fa-solid fa-gamepad"></i></a>
       </p>
       <p class="contact">
         <a href="/contact.html">Contact <i class="fa-solid fa-phone"></i></a>
