--- a/snake.html
+++ b/snake.html
@@ -22,7 +22,7 @@
     <div id="top" class="top-bar">
       <i class="fa-solid fa-bars nav-bar-option"></i>
       <p class="logo-text top-bar-item">
-        <a class="top-bar-item" href="/index.html">
+        <a class="top-bar-item" href="/index.html#top">
           The Arcade
           <img
             class="logo top-bar-item"
@@ -31,7 +31,7 @@
         </a>
       </p>
       <p class="games">
-        <a href="/index.html"
+        <a href="/index.html#games-selection"
           >Games <i class="fa-solid fa-gamepad"></i
         ></a>
       </p>
