--- a/snake.html
+++ b/snake.html
@@ -40,7 +40,14 @@
       </p>
     </div>
     <div class="container-game">
-      <div class="game"></div>
+      <div class="game">
+      <marquee
+          ><img src="snekRight.png" alt="Snek" /><img
+            src="sneklengthright.png"
+            alt="SnekLength" /><img
+            src="SnekEndRight.png"
+            alt="Snekend"
+        /></marquee></div>
     </div>
     <script src="/snake-script.js"></script>
   </body>
