--- a/snake.html
+++ b/snake.html
@@ -43,7 +43,7 @@
       <div class="game">
       <marquee
           ><img src="snekRight.png" alt="Snek" /><img
-            src="sneklengthright.png"
+            src="sneklengthleft.png"
             alt="SnekLength" /><img
             src="SnekEndRight.png"
             alt="Snekend"
