--- a/snake.html
+++ b/snake.html
@@ -45,7 +45,7 @@
           ><img src="snekRight.png" alt="Snek" /><img
             src="sneklengthleft.png"
             alt="SnekLength" /><img
-            src="SnekEndRight.png"
+            src="SnekLengthLeft.png"
             alt="Snekend"
         /></marquee></div>
     </div>
