--- a/snake.html
+++ b/snake.html
@@ -43,9 +43,9 @@
       <div class="game">
       <marquee
           ><img src="snekRight.png" alt="Snek" /><img
-            src="sneklengthleft.png"
+            src="snekLengthRight.png"
             alt="SnekLength" /><img
-            src="SnekLengthLeft.png"
+            src="SnekEndRight.png"
             alt="Snekend"
         /></marquee></div>
     </div>
