--- a/snake.html
+++ b/snake.html
@@ -42,7 +42,7 @@
     <div class="container-game">
       <div class="game">
       <marquee
-          ><img src="snekRight.png" alt="Snek" /><img
+          ><img src="SnekRight.png" alt="Snek" /><img
             src="snekLengthRight.png"
             alt="SnekLength" /><img
             src="SnekEndRight.png"
