--- a/snake.html
+++ b/snake.html
@@ -43,7 +43,7 @@
       <div class="game">
       <marquee
           ><img src="SnekRight.png" alt="Snek" /><img
-            src="snekLengthRight.png"
+            src="SnekLengthRight.png"
             alt="SnekLength" /><img
             src="SnekEndRight.png"
             alt="Snekend"
