--- a/snake.html
+++ b/snake.html
@@ -20,7 +20,7 @@
   </head>
   <body>
     <div id="top" class="top-bar">
-      <i class="fa-solid fa-bars nav-bar-option"></i>
+      <i id="menu" class="fa-solid fa-bars nav-bar-option"></i>
       <p class="logo-text top-bar-item">
         <a class="top-bar-item" href="/index.html#top">
           The Arcade
@@ -39,10 +39,16 @@
         <a href="/contact.html">Contact <i class="fa-solid fa-phone"></i></a>
       </p>
     </div>
+    <nav class="nav-bar">
+      <p class="toggle-text">
+        &nbsp;Toggle Theme&nbsp;<i
+          class="fa-solid fa-toggle-off toggleTheme"></i>
+      </p>
+    </nav>
     <div class="container-game">
       <div class="game">
-      <marquee
-          ><img src="SnekRight.png" alt="Snek" /><img
+      <marquee id="snek">
+          <img src="SnekRight.png" alt="Snek" /><img
             src="SnekLengthRight.png"
             alt="SnekLength" /><img
             src="SnekEndRight.png"
