--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   </head>
   <body>
     <div id="top" class="top-bar">
-      <i class="fa-solid fa-bars nav-bar-option"></i>
+      <i id="menu" class="fa-solid fa-bars nav-bar-option"></i>
      <p class="logo-text top-bar-item">
         <a class="top-bar-item" href="/index.html#top">
           The Arcade
@@ -39,7 +39,12 @@
         <a href="/contact.html">Contact <i class="fa-solid fa-phone"></i></a>
       </p>
     </div>
-    <nav class="nav-bar"></nav>
+    <nav class="nav-bar">
+      <p class="toggle-text">
+        &nbsp;Toggle Theme&nbsp;<i
+          class="fa-solid fa-toggle-off toggleTheme"></i>
+      </p>
+    </nav>
     <div id="games-selection" class="games-selection">
       <div class="item 1">
         <a class="snakeLink" href="/snake.html">
