--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;500;900&display=swap"
       rel="stylesheet" />
-    <script src="/arcade-scripts.js"></script>
+    <script src="/arcade_scripts.js"></script>
   </head>
   <body>
     <div id="top" class="top-bar">
