--- a/snake.html
+++ b/snake.html
@@ -53,9 +53,9 @@
         <p id="lapsB"></p>
 
         <div id="snek">
-          <img id="snekHead" src="/snekRight.png" alt="Snek" /><img
+          <img id="snekHead" src="/SnekRight.png" alt="Snek" /><img
             id="snekLength"
-            src="/sneklengthright.png"
+            src="/SnekLengthRight.png"
             alt="SnekLength" /><img
             src="/SnekEndRight.png"
             alt="SnekEnd"
