--- a/snake.html
+++ b/snake.html
@@ -48,34 +48,26 @@
     </nav>
     <div id="game" class="container-game">
       <div class="ui2">
+        <!--
         <p id="lapsS"></p>
         <p id="lapsR"></p>
-        <p id="lapsB"></p>
+        <p id="lapsB"></p> -->
+        <p>
+          Version: 0.1<br />
+          Snek Pre-Alpha
+        </p>
         <div id="snek">
-          <img id="snekHead" src="/SnekRight.png" alt="Snek" /><img
-            id="snekLength"
-            src="/SnekLengthRight.png"
-            alt="SnekLength" /><img
-            src="/SnekEndRight.png"
-            alt="SnekEnd"
-            id="snekEnd" />
-          <img id="snekHeadR" src="/RacerSnekR.png" alt="Snek" /><img
-            id="snekLengthR"
-            src="/RacerSnekLL.png"
-            alt="SnekLength" /><img
-            id="snekLengthRS"
-            src="/RacerSnekLLS.png"
-            alt="SnekLength" /><img
-            src="/RacerEL.png"
-            alt="SnekEnd"
-            id="snekEndR" />
-          <img id="snekHeadB" src="/BoomSnekR.png" alt="Snek" /><img
-            id="snekLengthB"
-            src="/BoomSnekLL.png"
-            alt="SnekLengthB" /><img
-            src="/BoomSnekEL.png"
-            alt="SnekEndB"
-            id="snekEndB" />
+          <img id="SnekHead" src="/images/SnekHeads.png" alt="snekHeads" />
+          <img
+            id="SnekLength"
+            src="/images/SnekLengths.png"
+            alt="snekLengths" />
+          <img id="food" src="/images/Foods.png" alt="food" />
+          <img
+            id="collidables"
+            src="/images/Collidables.png"
+            alt="Collidables" />
+          <img id="SnekEnd" src="/images/SnekEnds.png" alt="snekEnds" />
         </div>
       </div>
       <div class="game">
