--- a/snake.html
+++ b/snake.html
@@ -57,17 +57,17 @@
           Snek Pre-Alpha
         </p>
         <div id="snek">
-          <img id="SnekHead" src="/images/SnekHeads.png" alt="snekHeads" />
+          <img id="SnekHead" src="/SnekHeads.png" alt="snekHeads" />
           <img
             id="SnekLength"
-            src="/images/SnekLengths.png"
+            src="/SnekLengths.png"
             alt="snekLengths" />
-          <img id="food" src="/images/Foods.png" alt="food" />
+          <img id="food" src="/Foods.png" alt="food" />
           <img
             id="collidables"
-            src="/images/Collidables.png"
+            src="/Collidables.png"
             alt="Collidables" />
-          <img id="SnekEnd" src="/images/SnekEnds.png" alt="snekEnds" />
+          <img id="SnekEnd" src="/SnekEnds.png" alt="snekEnds" />
         </div>
       </div>
       <div class="game">
