--- a/snake.html
+++ b/snake.html
@@ -42,7 +42,7 @@
     </div>
     <nav class="nav-bar">
       <p class="toggle-text">
-        &nbsp;Toggle Theme&nbsp;<i
+        &nbsp;Toggle Theme&nbsp;<i id="toggleTheme"
           class="fa-solid fa-toggle-off toggleTheme"></i>
       </p>
     </nav>
