--- a/snake.html
+++ b/snake.html
@@ -17,7 +17,7 @@
     <link
       href="https://fonts.googleapis.com/css2?family=Roboto:wght@100;400;500;900&display=swap"
       rel="stylesheet" />
-    <script defer src="snake-script.js"></script>
+    <script src="/snake-script.js" defer="5000ms"></script>
   </head>
   <body>
     <div id="top" class="top-bar">
@@ -75,6 +75,5 @@
       </div>
       <div class="ui"></div>
     </div>
-    <script src="/snake-script.js"></script>
   </body>
 </html>
