--- a/snake.html
+++ b/snake.html
@@ -53,7 +53,7 @@
         <p id="lapsR"></p>
         <p id="lapsB"></p> -->
         <p>
-          Version: 0.1<br />
+          Version:<br />
           Snek Pre-Alpha
         </p>
         <div id="snek">
