--- a/snake.html
+++ b/snake.html
@@ -56,6 +56,7 @@
           Version:<br />
           Snek Pre-Alpha
         </p>
+        <p id="scoreText">Score: 0</p>
         <div id="snek">
         </div>
       </div>
